[tool.poetry]
name = "zaberov-dz-13-1-2"
version = "0.1.0"
description = ""
authors = ["zaberov.dv <zaberov.dv@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
isodate = "^0.6.1"
google-api-python-client = "^2.103.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"